--- a/src/assets/css/photos.css
+++ b/src/assets/css/photos.css
@@ -20,7 +20,12 @@
 } */
 
 /* 2 columns by default, hide columns 2 & 3 */
-.grid-col--2, .grid-col--3 { display: none }
+.grid-col--1, .grid-col--2, .grid-col--3 { display: none }
+
+/* 1 columns at medium size */
+@media ( min-width: 480px ) {
+  .grid-col--1 { display: block; } /* show column 1 */
+}
 
 /* 3 columns at medium size */
 @media ( min-width: 768px ) {
