add guttered- prefix to outer photo grid.
The outer class is needed to add the side gutters, but it was confusing 
why there were two nested photo grids.

--- a/src/assets/css/photos.css
+++ b/src/assets/css/photos.css
@@ -39,7 +39,7 @@
 
 /* Add gutter to entire grid so that exterior side
 margins are equally wide as interior vertical gutters */
-.photo-grid {
+.guttered-photo-grid {
   margin-right: 5px;
   margin-left: 5px
 }
