--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -8,14 +8,16 @@
   --seewhite: rgba(230, 230, 230, 0.1);
 }
 
-* {
+html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-html {
-  /*height: 100%;*/
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
