Make colcade calculate image sizes correctly
Before, all the grid-cols and grid-items were getting place next to each 
other in the grids flex box. This made it so that the width of the 
columns was all off, since the 4 columns wouldn't actually span the 
entire wide. This made it so images were getting placed in the wrong 
place.

Additionally, since colcade might run before the images are loaded, the 
height of each item is garbage. To fix this, add a placeholder div that 
it underneath the image to begin with, so the size is calculated 
correctly, and once the image loads it is covered up.

--- a/src/assets/css/photos.css
+++ b/src/assets/css/photos.css
@@ -1,9 +1,10 @@
-/* with flexbox */
-.grid {
+/* Make the columns expand left-right */
+.grid-col-container {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin: 5px;
 }
 
 .grid-col {
@@ -31,26 +32,25 @@
   .grid-col--3 { display: block; } /* show column 3 */
 }
 
-/* Add gutter to entire grid so that exterior side
-margins are equally wide as interior vertical gutters */
-.guttered-photo-grid {
-  margin-right: 5px;
-  margin-left: 5px
-}
-
 .grid-item {
   margin-left: 7px;
   margin-right: 7px;
-  margin-top: 14px;
+  padding-top: 14px;
   display: block;
   transition: all .2s ease-in-out;
   position: relative;
 }
 
-a.grid-item img{
-  margin: 0;
+.photo-placeholder {
+  position: relative;
+  background-color: rgba(0,255,255,.2);;
+}
+
+.grid-item img {
+  position: absolute;
   width: 100%;
-  display: block;
+  left: 0;
+  bottom: 0;
 }
 
 .grid-item:hover {
